  `----------------------'

To see more details of bugs, go to this URL:
http://sf.net/tracker/?func=detail&atid=100239&group_id=239&aid=NUMBER
Where "NUMBER" is the bug number.

----------------------------------------------------------------------
 2.6.3 - DD/MMM/2006
----------------------------------------------------------------------

 - Updated translations (hu, zh_TW).
 - Fixed (xc262-fix-ircurl.diff).
 - Fixed the tree layout "flashing" (redrawing slowly) after you
   switched to tabs and back to tree.
 - Fixed plugin/script get_list("users") causing a critical GDK warning
   when not executed from the front-most tab.
 - Added spelling support in the input-box via GTKSpell.
 - Improved the error reporting when connecting through a Socks proxy.
 - DCC file transfers via http/socks45/wingate proxy is now supported
   (Damjan Jovanovic & me).
 - You can now mark and copy timestamps if you hold down SHIFT.
 - 
 - 


----------------------------------------------------------------------
 2.6.2 - 27/Mar/2006
----------------------------------------------------------------------

 - Updated translations (de, fr, ja, sv).
 - Made "/server freenode" send auto-join channels but not
   "/server irc://freenode".
 - Fixed building of xchat-text (although not recommended!).
 - Fixed using Strip mIRC colors & Color nicks at the same time.
 - Fixed a bug in timestamp drawing using non-fixed-width font [1404341].
 - Fixed display of realname in the nick-name right-click menu when it
   contains a '<' or '&' character [1403069].
 - Added support for UniBG's nickserv (ongeboren).
 - The move-to-complete-dir routine now treats encoding/UTF8 correctly.
 - Show help when using wrong args for /DCC, instead of silence.
 - Support receiving 2048 bytes per line from server and dcc-chat, so we
   can support 512 UTF-8 characters that some servers now send.
 - Added /gui detach and /gui attach commands for scripters.
 - The server list window now remembers its size.