@@ -74,6 +74,8 @@ p { margin: 3% }
 <br/><br/>
 <a href="#q220">20. How do I minimize X-Chat to the System Tray (Notification Area)?</a>
 <br/><br/>
+<a href="#q221">21. Can I select and copy text with the time stamps?</a>
+<br/><br/>
 </p>
 
 <h2>3. Section Three: Contributions, Development and Bugs.</h2>
@@ -378,6 +380,12 @@ Where "~" represents your home directory i.e.: $HOME/.xchat2/
 There are two plugins available that allow this:
 <br/>Unix: <a href="http://www.blight.tk/">SysTray Plugin</a>
 <br/>Windows: <a href="http://www.sinisterdevelopments.com/">xTray</a>
+</p>
+
+<br/><h3><a name="q221">21. Can I select and copy text with the time stamps?</a></h3>
+<p>
+Yes, but this requires at least XChat 2.6.3. Simply hold down SHIFT while marking
+the text and the time stamps will be included.
 </p>
 
 <br/><h2>3. Section Three: Contributions, Development and Bugs.</h2>
